# ontobot-change-agent

./: .gitignore  LICENSE  README.md  cli.html  developers.html  first_run.html  genindex.html  implementation.html  index.html  installation.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  usage.html
.github/workflows/: deploy-documentation.yml  duplicate-issue-as-comment.yml  duplicate-issue.yml  new-pr-java.yml  new-pr.yml  ontology_diff_comment.yml  pypi-publish.yml  qc.yml  update-readme.yml
_sources/: cli.rst.txt  developers.rst.txt  implementation.rst.txt  index.rst.txt  installation.rst.txt  intro.rst.txt  usage.rst.txt
docs/: cli.rst  conf.py  developers.rst  first_run.rst  implementation.rst  index.rst  installation.rst  intro.rst  usage.rst
docs/source/: conf.py
src/onto_crawler/: __init__.py  __main__.py  api.py  cli.py  version.py
src/ontobot_change_agent/: __init__.py  __main__.py  api.py  cli.py  constants.py  version.py
tests/: __init__.py  test_api.py  test_cli.py  test_version.py
tests/resources/: envo-subset.owl
