# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[tool.poetry]
name = "onto-crawler"
version = "0.1.10"
description = "Crawl github for ontology related issues."
readme = "README.md"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
oaklib = "^0.1.35"
PyGithub = "^1.55"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-click = "^4.3.0"

[tool.poetry.scripts]
ocrawl = "onto_crawler.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    ]

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
reverse_relative = true
