[tool.poetry]

name = "ontobot-change-agent"
version = "0.2.2"
description = "Update ontologies using change language."

authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
oaklib = "^0.1.46"
PyGithub = "^1.55"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.4"
sphinx-click = "^4.3.0"

[tool.poetry.scripts]
ochange = "ontobot_change_agent.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    ]

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
